# star_burger

./: .dockerignore  .gitignore  Dockerfile.backend.prod  Dockerfile.frontend.dev  Dockerfile.frontend.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  package-lock.json  pyproject.toml
backend/: .dockerignore  Dockerfile.dev  Dockerfile.prod
backend/foodcartapp/: admin.py  views.py
backend/foodcartapp/migrations/: 0040_orderitem_delete_orderproductitem.py  0044_order_comment.py  0046_order_payment_method.py  0049_alter_order_payment_method_alter_order_phonenumber_and_more.py
backend/geocache/: apps.py  geocoder.py
backend/geocache/migrations/: 0001_initial.py  0002_geocodedaddress_fetched_at.py  0003_remove_geocodedaddress_fetched_at_and_more.py
backend/restaurateur/: views.py
backend/restaurateur/templates/: order_items.html
backend/star_burger/: settings.py
foodcartapp/: admin.py  models.py  serializers.py  views.py
foodcartapp/migrations/: 0038_order_productitem_orderproductitem.py  0039_orderproductitem_quantity_delete_productitem.py  0041_rename_first_name_order_firstname_and_more.py  0042_orderitem_price.py  0043_order_status.py  0045_order_called_at_order_created_at_order_delivered_at.py  0047_order_restaurant.py  0048_alter_order_status.py
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod
geocache/: admin.py  models.py
restaurateur/: views.py
restaurateur/templates/: order_items.html
star_burger/: settings.py
