[project]
name = "star-burger"
version = "0.1.0"
description = "Food Delivery Star Burger"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.*",
    "django-debug-toolbar==5.2.*",
    "Pillow==11.2.*",
    "environs[django]==14.2.*",
    "django-phonenumber-field[phonenumberslite]>=8.3.0",
    "djangorestframework>=3.16.1",
    "markdown>=3.9",
    "django-filter>=25.2",
    "requests>=2.32.5",
    "geopy>=2.4.1",
    "rollbar>=1.3.0",
]
